# Game

./: CMakeLists.txt
include/: Character.h  CharacterCreationState.h  CharacterManager.h  ExitMenuState.h  GameState.h  InGameState.h  LoadCharacterState.h  MainMenuState.h  Race.h  RaceManager.h  RaceStatsLoader.h  Rank.h  StateManager.h  Stats.h
races/: barbarian.json
saves/: jannis.json  test.json  test1.json
src/: Character.cpp  CharacterCreationState.cpp  CharacterManager.cpp  ExitMenuState.cpp  InGameState.cpp  LoadCharacterState.cpp  MainMenuState.cpp  Race.cpp  RaceStatsLoader.cpp  Rank.cpp  StateManager.cpp  Stats.cpp  main.cpp
test/: CharacterManagerTest.cpp  CharacterTest.cpp  StatsTest.cpp
